--- a/test.html
+++ b/test.html
@@ -57,7 +57,7 @@
     <p style="color: rgb(255, 255, 255);">กดที่ปุ่มเพื่อดูประวัติของ-->
         <button style="background-color: rgb(171, 107, 239);" onclick="window.open('./test3.html')">JOMJAM</button></p>
     <p style="color: rgb(255, 255, 255);">กับไปหน้าhome-->
-        <button style="background-color:rgb(201, 144, 255);" onclick="window.open('./test.html')" >HOME</button></p>
+        <button style="background-color:rgb(201, 144, 255);" onclick="window.open('./index.html')" >HOME</button></p>
     <p style="text-align: center;">BY.KANCHAPORN</p>
     </footer>
     </body>
