--- a/test3.html
+++ b/test3.html
@@ -48,7 +48,7 @@
             <p style="color: rgb(255, 255, 255);" >กดที่ปุ่มเพื่อดูประวัติของ-->
                 <button style="background-color:rgb(201, 144, 255);" onclick="window.open('./test2.html')" >BAIFERN</button></p>
              <p style="color: rgb(255, 255, 255);">กับไปหน้าhome-->
-                 <button style="background-color:rgb(201, 144, 255);" onclick="window.open('./test.html')" >HOME</button></p>
+                 <button style="background-color:rgb(201, 144, 255);" onclick="window.open('./index.html')" >HOME</button></p>
             <p style="text-align: center;"><font color=white> BY. PRACHAYAPORN</font></p>
            
         </footer>
